--- a/charts/fadc-k8s-ctrl-2.0.1-DEBUG/values.yaml
+++ b/charts/fadc-k8s-ctrl-2.0.1-DEBUG/values.yaml
@@ -3,9 +3,9 @@
 # Declare variables to be passed into your templates.
 # FortiADC Ingress Controller image from Dockerhub.com
 image:
-  repository: fortinet/fortiadc-ingress
+  repository: fortinet/qa-fortiadc-ingress
   pullPolicy: IfNotPresent
-  tag: "2.0.1"
+  tag: "2.0.1.6"
 
 nameOverride: ""
 fullnameOverride: ""
@@ -59,3 +59,5 @@ parameters:
   virtualServerPersistence : "optional"
   virtualServerFortiGSLB : "optional"
   openshiftRouteSupport: "no"
+imagePullSecrets:
+  - name: regcred
