--- a/charts/fadc-k8s-ctrl-3.0.0/values.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0/values.yaml
@@ -1,11 +1,11 @@
 # Default values for fadc-k8s-ctrl.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-# FortiADC Ingress Controller image from Dockerhub.com
+# FortiADC Kubernetes Controller image from Dockerhub.com
 image:
-  repository: fortinet/qa-fortiadc-ingress-new
+  repository: fortinet/fortiadc-ingress
   pullPolicy: IfNotPresent
-  tag: "2.0.3.24"
+  tag: "3.0.0"
 
 nameOverride: ""
 fullnameOverride: ""
@@ -62,5 +62,3 @@ parameters:
   virtualServerFortiGSLB : "optional"
   openshiftRouteSupport: "no"
   enableStaticRouteSupport: "no"
-imagePullSecrets:
-  - name: regcred
