--- a/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/deployment.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/deployment.yaml
@@ -28,7 +28,15 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- if eq .Values.parameters.openshiftRouteSupport "no" }}
+            runAsUser: 999
+            {{- end }}
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop: ["ALL"]
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
