--- a/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/virtualservers_crd.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/virtualservers_crd.yaml
@@ -111,7 +111,7 @@ spec:
                   default: disable
                 fortigslbHostName:
                   type: string
-                  pattern: '^([a-zA-Z0-9]([-a-zA-Z0-9]*[a-zA-Z0-9])?\.)*([a-zA-Z0-9][-a-zA-Z0-9]*[a-zA-Z0-9])$'
+                  pattern: '^(@|\*|[A-Za-z0-9](?:[A-Za-z0-9-]*[A-Za-z0-9])?(?:\.[A-Za-z0-9](?:[A-Za-z0-9-]*[A-Za-z0-9])?)*)$'
                 fortigslbDomainName:
                   type: string
                   pattern: '^([a-zA-Z0-9]([-a-zA-Z0-9]*[a-zA-Z0-9])?\.)+[a-zA-Z]{2,}\.?$'
