--- a/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/rbac.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/rbac.yaml
@@ -5,7 +5,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["pods", "services", "nodes", "endpoints", "secrets"]
-  verbs: ["get", "watch", "list", "update"]
+  verbs: ["get", "watch", "list"]
 - apiGroups:
   - networking.k8s.io
   resources:
