--- a/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/virtualservers_crd.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0-DEBUG/templates/virtualservers_crd.yaml
@@ -41,6 +41,7 @@ spec:
               required:
                 - address
                 - contentRoutings
+                - vdom
               properties:
                 addressType:
                   type: string
