--- a/charts/fadc-k8s-ctrl-3.0.0/templates/deployment.yaml
+++ b/charts/fadc-k8s-ctrl-3.0.0/templates/deployment.yaml
@@ -21,6 +21,9 @@ spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      volumes:
+        - name: temp-storage
+          emptyDir: {}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -35,6 +38,9 @@ spec:
               drop: ["ALL"]
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+            - name: temp-storage
+              mountPath: /apptmp
           env:
           - name: VirtualServerNatSrcPool
             value: {{ .Values.parameters.virtualServerNatSrcPool }}
