--- a/charts/fadc-k8s-ctrl-3.1.0-DEBUG/templates/rbac.yaml
+++ b/charts/fadc-k8s-ctrl-3.1.0-DEBUG/templates/rbac.yaml
@@ -74,6 +74,9 @@ rules:
   - get
   - list
   - watch
+- apiGroups: [""]
+  resources: ["pods/exec"]
+  verbs: ["create"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
