--- a/customResource/virtualserver/virtualserver_simple_fanout.yaml
+++ b/customResource/virtualserver/virtualserver_simple_fanout.yaml
@@ -1,18 +1,20 @@
-apiVersion: fadk8sctrl.fortinet.com/v1alpha1
+apiVersion: fadk8sctrl.fortinet.com/v1alpha2
 kind: VirtualServer
 metadata:
-  name: tls-san-virtualserver
+  name: simple-fanout-virtualserver
   annotations: {
     "fortiadc-ip" : "172.23.133.110",
     "fortiadc-login" : "fad-login",
     "fortiadc-ctrl-log" : "enable",
     "fortiadc-admin-port": "443"
    }
+  labels:
+    fadcr: "true"
 spec:
   addressType: ipv4
-  address: 192.168.1.100
+  address: 192.168.1.101
   port: 443
-  interface: port1
+  interface: port3
   loadBalanceProfile: LB_PROF_HTTPS
   loadBalanceMethod: LB_METHOD_ROUND_ROBIN
   wafProfile: High-Level-Security
@@ -28,32 +30,16 @@ spec:
   fortigslbHostName: samplehost
   fortigslbDomainName: example.com.
   contentRoutings:
-    - name: default-route
-      host: a.foo.com
-      path: /
-      pathType: Prefix
-      realServerPool:
-        service: default-http-backend
-        servicePort: 80
-        serviceNamespace: default
     - name: route1
-      host: b.foo.com
-      path: /env
-      pathType: Exact
-      realServerPool:
-        service: service1
-        servicePort: 1241
-        serviceNamespace: default
-    - name: route2
-      host: c.foo.com
+      host: test.com
       path: /info
       pathType: Prefix
       realServerPool:
         service: service1
         servicePort: 1241
         serviceNamespace: default
-    - name: route3
-      host: https-example.foo.com
+    - name: route2
+      host: test.com
       path: /hello
       pathType: Prefix
       realServerPool:
@@ -62,13 +48,4 @@ spec:
         serviceNamespace: default
   natSourcePoolList:
     - name: nat-pool-1
-  tls:
-    - hosts:
-        - a.foo.com
-        - b.foo.com
-        - c.foo.com
-      secretName: tls-foo
-    - hosts:
-        - https-example.foo.com
-      secretName: testsecret-tls
   vdom: root
