--- a/customResource/virtualserver/virtualserver_tls_san.yaml
+++ b/customResource/virtualserver/virtualserver_tls_san.yaml
@@ -1,20 +1,18 @@
-apiVersion: fadk8sctrl.fortinet.com/v1alpha1
+apiVersion: fadk8sctrl.fortinet.com/v1alpha2
 kind: VirtualServer
 metadata:
-  name: simple-fanout-virtualserver
+  name: tls-san-virtualserver
   annotations: {
     "fortiadc-ip" : "172.23.133.110",
     "fortiadc-login" : "fad-login",
     "fortiadc-ctrl-log" : "enable",
     "fortiadc-admin-port": "443"
    }
-  labels:
-    fadcr: "true"
 spec:
   addressType: ipv4
-  address: 192.168.1.101
+  address: 192.168.1.100
   port: 443
-  interface: port3
+  interface: port1
   loadBalanceProfile: LB_PROF_HTTPS
   loadBalanceMethod: LB_METHOD_ROUND_ROBIN
   wafProfile: High-Level-Security
@@ -30,16 +28,32 @@ spec:
   fortigslbHostName: samplehost
   fortigslbDomainName: example.com.
   contentRoutings:
+    - name: default-route
+      host: a.foo.com
+      path: /
+      pathType: Prefix
+      realServerPool:
+        service: default-http-backend
+        servicePort: 80
+        serviceNamespace: default
     - name: route1
-      host: test.com
+      host: b.foo.com
+      path: /env
+      pathType: Exact
+      realServerPool:
+        service: service1
+        servicePort: 1241
+        serviceNamespace: default
+    - name: route2
+      host: c.foo.com
       path: /info
       pathType: Prefix
       realServerPool:
         service: service1
         servicePort: 1241
         serviceNamespace: default
-    - name: route2
-      host: test.com
+    - name: route3
+      host: https-example.foo.com
       path: /hello
       pathType: Prefix
       realServerPool:
@@ -48,4 +62,13 @@ spec:
         serviceNamespace: default
   natSourcePoolList:
     - name: nat-pool-1
+  tls:
+    - hosts:
+        - a.foo.com
+        - b.foo.com
+        - c.foo.com
+      secretName: tls-foo
+    - hosts:
+        - https-example.foo.com
+      secretName: testsecret-tls
   vdom: root
