--- a/service_examples/tcp_echo_service.yaml
+++ b/service_examples/tcp_echo_service.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: tcp-echo-server
 spec:
+  automountServiceAccountToken: false
   containers:
     - name: tcp-echo-server
       image: alpine/socat
