--- a/service_examples/postgresql_ssl_service.yaml
+++ b/service_examples/postgresql_ssl_service.yaml
@@ -81,33 +81,31 @@ spec:
           readOnly: true
         - name: certs
           mountPath: /certs
+
       containers:
       - name: postgres
         image: postgres:16-alpine
         ports:
         - containerPort: 5432
+
         env:
-        - name: POSTGRES_USER
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_USER
-        - name: POSTGRES_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_PASSWORD
-        - name: POSTGRES_DB
-          valueFrom:
-            secretKeyRef:
-              name: postgres-secret
-              key: POSTGRES_DB
+        - name: POSTGRES_USER_FILE
+          value: /etc/pgsecret/POSTGRES_USER
+        - name: POSTGRES_PASSWORD_FILE
+          value: /etc/pgsecret/POSTGRES_PASSWORD
+        - name: POSTGRES_DB_FILE
+          value: /etc/pgsecret/POSTGRES_DB
+
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: temp-data
         - name: certs
           mountPath: /certs
           readOnly: true
+        - name: pg-secret
+          mountPath: /etc/pgsecret
+          readOnly: true
+
         args:
           - "-c"
           - "listen_addresses=*"
@@ -119,6 +117,7 @@ spec:
           - "ssl_key_file=/certs/server.key"
           - "-c"
           - "ssl_ca_file=/certs/ca.crt"
+
       volumes:
       - name: temp-data
         emptyDir: {}
@@ -128,6 +127,11 @@ spec:
           defaultMode: 0400
       - name: certs
         emptyDir: {}
+      - name: pg-secret
+        secret:
+          secretName: postgres-secret
+          defaultMode: 0440
+
 ---
 apiVersion: v1
 kind: Service
@@ -150,4 +154,5 @@ spec:
       port: 5432
       targetPort: 5432
       protocol: TCP
+
 
