--- a/customResource/glb/host.yaml
+++ b/customResource/glb/host.yaml
@@ -1,7 +1,7 @@
 apiVersion: fadk8sctrl.fortinet.com/v1alpha1
 kind: Host
 metadata:
-  name: minimal-host
+  name: simple-host
   annotations: {
     "fortiadc-ip" : "172.23.133.185",
     "fortiadc-login" : "fad-login",
