--- a/charts/fadc-k8s-ctrl-3.1.0-DEBUG/templates/hosts_crd.yaml
+++ b/charts/fadc-k8s-ctrl-3.1.0-DEBUG/templates/hosts_crd.yaml
@@ -46,7 +46,7 @@ spec:
                 domain:
                   type: string
                   pattern: '^[a-zA-Z0-9][a-zA-Z0-9.-]{0,61}[a-zA-Z0-9.]$'
-                policys:
+                dnsPolicy:
                   type: array
                   items:
                     type: string
